# isocraft

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/shaders/: chunk.wgsl  model.wgsl
src/utils/: camera.rs  input.rs  mod.rs  model.rs  shader.rs  state.rs  voxel_handler.rs
src/world/: chunk.rs  mod.rs
