[package]
name = "camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.10"
log = "0.4"
noise = "0.9.0"
obj-rs = "0.7.1"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }
winit_input_helper = "0.16.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
